[package]
name = "claydash"
version = "0.1.0"
edition = "2018"

[lib]
name = "clay"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "claydash"
path = "src/main.rs"

[build-dependencies]
cc = "1.0"
bindgen = "0.71"

[dependencies]
cfg-if = "1.0.0"
rand = "0.9"

[features]
hot_reload = []
